--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link type="text/css" rel="stylesheet" href="main.css" />
     <title>Emmanuel Gomez</title>
     <style>
       body {
@@ -20,7 +21,9 @@
     </script>
   </head>
   <body>
-    <div id="container"></div>
+    <div id="container">
+      <h1 class="neonText">Emmanuel Gomez</h1>
+    </div>
     <script type="module" src="index.js"></script>
   </body>
 </html>
